# topkube_benchmark

./: CMakeLists.txt  README.md
benchmark/: README.md
data/: analysis.R  problems.R  quantiles.R  small.psv  speedup-by-threshold.R  speedup.R
ide/xcode/topk.xcodeproj/: project.pbxproj
ide/xcode/topk.xcodeproj/project.xcworkspace/xcuserdata/llins.xcuserdatad/: UserInterfaceState.xcuserstate
ide/xcode/topk.xcodeproj/xcuserdata/llins.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ide/xcode/topk.xcodeproj/xcuserdata/llins.xcuserdatad/xcschemes/: topk.xcscheme
ide/xcode/topkube_benchmark.xcodeproj/: project.pbxproj
ide/xcode/topkube_benchmark.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ide/xcode/topkube_benchmark.xcodeproj/project.xcworkspace/xcuserdata/llins.xcuserdatad/: UserInterfaceState.xcuserstate
ide/xcode/topkube_benchmark.xcodeproj/xcuserdata/llins.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ide/xcode/topkube_benchmark.xcodeproj/xcuserdata/llins.xcuserdatad/xcschemes/: topk.xcscheme  xcschememanagement.plist
scripts/: plot_hybrid_025_speedup_by_k.R  plot_keys_ranks_entries_density.R  plot_quartiles.R  plot_speedup.R  plot_speedup_by_threshold.R  prepare_timing_data.R  speedup.R  table_latency_by_threshold.R  table_speedup.R  topkube_benchmark_plot_hybrid_025_speedup_by_k.R  topkube_benchmark_plot_keys_ranks_entries_density.R  topkube_benchmark_plot_speedup.R  topkube_benchmark_table_hybrid_025_speedup_by_k.R  topkube_benchmark_table_image_hybrid_025_speedup_by_k.R  topkube_benchmark_table_image_latency.R  topkube_benchmark_table_image_speedup.R  topkube_benchmark_table_keys_ranks_entries_density.R  topkube_benchmark_table_speedup.R
src/: CMakeLists.txt  Makefile  benchmark.cc  format_problems.cc  problem.cc  problem.hh  rank.cc  rank.hh  rank_parser.cc  rank_parser.hh  scanner.cc  scanner.hh  scanner.rl  threshold_algorithm.cc  topk_algorithms.cc  topk_algorithms.hh
